fix: control overflow of text for long descriptions

--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -36,5 +36,7 @@ ion-card-content {
   position: absolute;
   top: 0;
   left: 150px;
-  margin: 15px;
+  margin: 0 15px;
+  height: 150px;
+  overflow: auto;
 }
